expected/main/gens/primNZBitRem-neg-64.err
ERROR: "actual/main/gens/primNZBitRem-neg-64.lc", line 3
external rem0  {primNZBitRem  0} :: Bit  0 -> NZBit  0 -> Bit  0
         ^
No generated implementation: Argument value 0 is too low; must be at least 2

ERROR: "actual/main/gens/primNZBitRem-neg-64.lc", line 4
external rem1  {primNZBitRem  1} :: Bit  1 -> NZBit  1 -> Bit  1
         ^
No generated implementation: Argument value 1 is too low; must be at least 2

ERROR: "actual/main/gens/primNZBitRem-neg-64.lc", line 5
external rem65 {primNZBitRem 65} :: Bit 65 -> NZBit 65 -> Bit 65
         ^
No generated implementation: Bit vector of width 65 does not fit in a single word

ERROR: "actual/main/gens/primNZBitRem-neg-64.lc", line 6
external rem1K {primNZBitRem 1K} :: Bit 1K -> NZBit 1K -> Bit 1K
         ^
No generated implementation: Argument value 1024 is too large; must be less than 1000

ERROR: Aborting after 4 previously reported errors

